-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 16
-
Component/s: hotspot
-
b17
[2020-09-17T22:10:02,526Z] ./open/src/hotspot/share/classfile/vmIntrinsics.cpp(853): fatal error C1010: unexpected end of file while looking for precompiled header. Did you forget to add '#include "precompiled.hpp"' to your source?
[2020-09-17T22:10:02,533Z] lib/CompileJvm.gmk:141: recipe for target '/cygdrive/t/workspace/build/windows-x64/hotspot/variant-server/libjvm/objs/vmIntrinsics.obj' failed
[2020-09-17T22:10:02,533Z] lib/CompileJvm.gmk:141: recipe for target '/cygdrive/t/workspace/build/windows-x64/hotspot/variant-server/libjvm/objs/vmIntrinsics.obj' failed
- clones
-
JDK-8253313 xmlstream.hpp missing from vmIntrinsics.cpp
-
- Resolved
-
- relates to
-
JDK-8243066 move VM_INTRINSICS_DO into its own vmIntrinsics.hpp file
-
- Resolved
-