8253314: precompiled.hpp missing from vmIntrinsics.cpp

Reviewed-by: mikael